# celerentis

./: .env.local  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  start.sh  start_api.sh  start_worker.sh
.github/workflows/: ci.yml
.next/: trace
apps/api/: Dockerfile  main.py  requirements.txt  worker.py
apps/web/: .dockerignore  .gitignore  Dockerfile  README.md  env.example  middleware.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vitest.config.ts
apps/web/.github/workflows/: ci.yml
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/debug-upload/: page.tsx
apps/web/app/jobs/: page.tsx
apps/web/app/new/: page.tsx
apps/web/app/projects/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/templates/: page.tsx
apps/web/components/: providers.tsx
apps/web/components/auth/: protected-route.tsx
apps/web/components/layout/: command-palette.tsx  main-layout.tsx  side-nav.tsx  top-nav.tsx
apps/web/components/ui/: file-dropzone.tsx  kpi-card.tsx  progress-stepper.tsx  project-card.tsx  (+4 more)
apps/web/e2e/: dashboard.spec.ts
apps/web/lib/: auth.ts  query-client.ts  store.ts  types.ts  utils.ts
apps/web/test/: setup.ts
apps/worker/: Dockerfile  requirements.txt  worker.py
examples/: README.md  config.sample.yaml  make_minimal_template.py  template.pptx
infra/: docker-compose.yml  env.example  init.sql
src/celerentis/: __init__.py  charts.py  cli.py  config.py  generator.py  templating.py  utils.py
tests/: test_config.py  test_end_to_end.py  test_templating.py
(+16 files in other folders)
